# simple_queue

./: LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  docker-compose.yml  perf.py  pyproject.toml  requirements.txt  test-requirements.txt
examples/: __init__.py  consumer_example.py  docker-compose.yml  perf_check.py  publisher_example.py
simple_queue/: __init__.py  core.py
tests/: __init__.py  conftest.py  test_context_managers.py  test_examples.py  test_integration.py  test_queue_connection.py  test_queue_consumer.py  test_queue_publisher.py
