[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_queue"
version = "0.1.0"
description = "A simple Redis streaming library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Alex", email = "alex@example.com"},
]
keywords = ["redis", "streaming", "messaging", "queue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Communications",
]
dependencies = [
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "autopep8>=2.0",
    "flake8>=3.8",
    "Flake8-pyproject>=1.2.0",
    "mypy>=0.800",
    "pylint>=3.0",
]

[project.scripts]
simple-queue-consumer = "simple_queue.examples.consumer_example:main"
simple-queue-publisher = "simple_queue.examples.publisher_example:main"

[project.urls]
Homepage = "https://github.com/yourusername/simple_queue"
Repository = "https://github.com/yourusername/simple_queue"
Issues = "https://github.com/yourusername/simple_queue/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["simple_queue*"]

[tool.setuptools.package-data]
simple_queue = ["py.typed"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=simple_queue --cov-report=html --cov-report=term --timeout=60"
testpaths = [
  "tests",
]

[tool.autopep8]
max_line_length = 150
indent_size = 2
aggressive = 1

[tool.flake8]
max-line-length = 150
extend-ignore = ["E203", "W503", "E501"]
per-file-ignores = []
indent-size = 2

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["union-attr", "arg-type", "operator", "misc"]

[tool.pylint.format]
max-line-length = 150
indent-string = "  "
indent-after-paren = 2

[tool.pylint.messages_control]
disable = [
  "C0114",  # missing-module-docstring
  "C0115",  # missing-class-docstring
  "C0116",  # missing-function-docstring
  "W1203",  # logging-fstring-interpolation
  "W0718",  # broad-exception-caught
  "W0212",  # protected-access
  "W0201",  # attribute-defined-outside-init
  "R0902",  # too-many-instance-attributes
  "R0903",  # too-few-public-methods
  "R0913",  # too-many-arguments
  "R0917",  # too-many-positional-arguments
  "R1705",  # no-else-return
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "_", "e", "id", "log"]
